Improve Windows compatibility

--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -3,7 +3,7 @@ project(code)
 
 set(CMAKE_CXX_STANDARD 17)
 
-if(APPLE)
+if(APPLE OR WIN32)
 else()
 find_package(LLVM REQUIRED CONFIG)
 endif()
@@ -76,16 +76,22 @@ set(SOURCE_FILES ${SOURCE_FILES}
 if(APPLE)
     include_directories(/usr/local/include)
     link_directories(/usr/local/opt/llvm/lib)
+elseif(WIN32)
+    include_directories("C:/Program Files (x86)/LLVM/include")
+    link_directories("C:/Program Files (x86)/LLVM/lib")
 endif()
 
 add_executable(code ${SOURCE_FILES})
 
 target_link_libraries(code
-    LLVMCore
-    LLVMSupport
     LLVMLinker
+    LLVMTransformUtils
+    LLVMCore
+    LLVMBinaryFormat
+    LLVMSupport
+    LLVMDemangle
 )
 
 if(APPLE)
-    target_link_libraries(code ncurses LLVMDemangle)
+    target_link_libraries(code ncurses)
 endif()
